Fix checkbox misalignment

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -248,22 +248,7 @@ div.right-col {
          padding-top: 24px;*/
 }
 
-input[type="checkbox"] {
-  /* fix for chrome on windows super huge checkboxes */
-  /*    -webkit-appearance: none;
-          -moz-appearance: none;*/
-  height: 16px;
-  width: 16px;
-}
 
-div.checkbox input[type="checkbox"] {
-  /* fix for chrome on windows super huge checkboxes */
-  /*    -webkit-appearance: none;
-          -moz-appearance: none;*/
-  height: 16px;
-  width: 16px;
-  margin-top: 2px;
-}
 
 /*div.checkbox {
       line-height: 1.2em;
@@ -502,6 +487,25 @@ a.btn.pdf::before {
   font-weight: 900;
   content: "\f1c1\00a0";
 }
+
+a.btn.download::before {
+  font-family: "Font awesome 5 Free";
+  font-weight: 900;
+  content: "\f56d\00a0";
+}
+
+button.btn.search::before {
+  font-family: "Font awesome 5 Free";
+  font-weight: 900;
+  content: "\f002\00a0";
+}
+
+a.btn.download::before {
+  font-family: "Font awesome 5 Free";
+  font-weight: 900;
+  content: "\f56d\00a0";
+}
+
 
 a.nav-link.pdf::before {
   font-family: "Font awesome 5 Free";
@@ -945,3 +949,30 @@ div.form-group.multicheckbox.is-invalid > div.invalid-feedback {
   display: block;
   font-size: .9rem;
 }
+
+input[type="checkbox"] { 
+  /* fix for chrome on windows super huge checkboxes */
+  /*    -webkit-appearance: none;
+          -moz-appearance: none;*/
+   height: 16px;
+  width: 16px;
+}
+
+div.checkbox input[type="checkbox"] { 
+  /* fix for chrome on windows super huge checkboxes */
+  /*    -webkit-appearance: none;
+          -moz-appearance: none;*/
+  height: 16px;
+  width: 16px;
+  margin-top: 2px;
+} 
+
+
+div.form-check input[type="checkbox"] { 
+  /* fix for chrome on windows super huge checkboxes */
+  /*    -webkit-appearance: none;
+          -moz-appearance: none;*/
+  height: 16px;
+  width: 16px;
+  margin-top: 1px;
+} 
